--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ a:hover{
 </class> 
   <div class="container-fluid">
     <div class="row rowmain">
-    <div class="col-md-5">  
+    <div class="col-md-8">  
       <div id="vis"></div>
-    </div>
+    <!-- </div>
     <div class="col-md-5">  
-      <div id="line"></div>
+      <div id="line"></div> -->
     </div>
-    <div class="col-md-5">  
+    <div class="col-md-4">  
       <div id="bar"></div>
     </div>
     </div>
@@ -111,7 +111,7 @@ a:hover{
 <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src='js/linemap.js'></script>
-<script src='js/barchart.js'></script>
+<!-- <script src='js/linemap.js'></script> -->
+<!-- <script src='js/barchart.js'></script> -->
 </body>
 </html>
